--- a/tutorials/Tutorial1_Hospital (no Embedding).ipynb
+++ b/tutorials/Tutorial1_Hospital (no Embedding).ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pf = Profiler(workers=2, tol=0.01, eps=0.05, embedtxt=False)"
+    "pf = Profiler(workers=2, tol=0, eps=0.05, embedtxt=False)"
    ]
   },
   {
@@ -50,10 +50,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.007925033569335938] Load Data start\n",
+      "INFO:profiler.utility:[1.2911088466644287] Load Data start\n",
       "\n",
       "INFO:profiler.dataset:parameters used for data loading:\n",
-      " {'na_values': {'', 'NaN', 'unknown', '?', 'nan', 'none', 'None'}, 'sep': ',', 'header': 'infer', 'dropcol': None, 'dropna': False, 'encoding': 'utf-8', 'normalize': True, 'min_categories_for_embedding': 10}\n",
+      " {'na_values': {'', 'unknown', 'nan', 'none', 'None', '?', 'NaN'}, 'sep': ',', 'header': 'infer', 'dropcol': None, 'dropna': False, 'encoding': 'utf-8', 'normalize': True, 'min_categories_for_embedding': 10}\n",
       "INFO:profiler.dataset:inferred types of attributes: {\n",
       "    \"ProviderNumber\": \"text\",\n",
       "    \"HospitalName\": \"text\",\n",
@@ -78,7 +78,7 @@
       "INFO:profiler.dataset:(possible types: numeric, categorical, text, date)\n",
       "INFO:profiler.dataset:inferred operators of attributes: {'ProviderNumber': ['equal'], 'HospitalName': ['equal'], 'Address1': ['equal'], 'Address2': ['equal'], 'Address3': ['equal'], 'City': ['equal'], 'State': ['equal'], 'ZipCode': ['equal'], 'CountyName': ['equal'], 'PhoneNumber': ['equal'], 'HospitalType': ['equal'], 'HospitalOwner': ['equal'], 'EmergencyService': ['equal'], 'Condition': ['equal'], 'MeasureCode': ['equal'], 'MeasureName': ['equal'], 'Score': ['equal'], 'Sample': ['equal'], 'Stateavg': ['equal']}\n",
       "INFO:profiler.dataset:(possible operators: equal, notequal, greater_than, less_than)\n",
-      "INFO:profiler.utility:[0.06264901161193848] Load Data execution time: 0.05472397804260254\n",
+      "INFO:profiler.utility:[1.3638529777526855] Load Data execution time: 0.07274413108825684\n",
       "\n"
      ]
     }
@@ -170,16 +170,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.11110186576843262] Create Training Data start\n",
+      "INFO:profiler.utility:[3.277878999710083] Create Training Data start\n",
       "\n",
       "INFO:profiler.transformer:needs multiplier = 214 to bound the error in inv cov estimation <= 0.05000000\n",
       "INFO:profiler.transformer:use multiplier = 214, and the bound is 0.00006293\n",
       "INFO:profiler.transformer:Draw Pairs\n",
-      "100%|██████████| 19/19 [00:00<00:00, 78.88it/s]\n",
+      "100%|██████████| 19/19 [00:00<00:00, 72.86it/s]\n",
       "INFO:profiler.transformer:Number of training samples: 227772\n",
       "INFO:profiler.transformer:Computing Differences\n",
       "INFO:profiler.transformer:estimated missing data probability in training data is 0.0299\n",
-      "INFO:profiler.utility:[1.66078782081604] Create Training Data execution time: 1.5496859550476074\n",
+      "INFO:profiler.utility:[4.8107688426971436] Create Training Data execution time: 1.5328898429870605\n",
       "\n"
      ]
     }
@@ -199,17 +199,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[12.059158086776733] Learn Structure start\n",
+      "INFO:profiler.utility:[6.6420018672943115] Learn Structure start\n",
       "\n",
-      "INFO:profiler.learner:use threshold 0.0410\n",
-      "INFO:profiler.utility:[12.237927913665771] Learn Structure execution time: 0.17876982688903809\n",
+      "/Users/zhihan/anaconda3/envs/fd37/lib/python3.7/site-packages/sklearn/covariance/graph_lasso_.py:265: ConvergenceWarning: graphical_lasso: did not converge after 500 iteration: dual gap: -1.648e-04\n",
+      "  % (max_iter, d_gap), ConvergenceWarning)\n",
+      "INFO:profiler.learner:use threshold 0.0426\n",
+      "INFO:profiler.utility:[7.427081823348999] Learn Structure execution time: 0.7850799560546875\n",
       "\n"
      ]
     }
@@ -229,16 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[13.005845069885254] Get Dependencies start\n",
+      "INFO:profiler.utility:[7.953394889831543] Get Dependencies start\n",
       "\n",
-      "INFO:profiler.utility:[13.105667114257812] Get Dependencies execution time: 0.0998220443725586\n",
+      "INFO:profiler.utility:[8.067937850952148] Get Dependencies execution time: 0.11454296112060547\n",
       "\n"
      ]
     },
@@ -246,22 +248,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ProviderNumber -> ZipCode (0.1759848630722444)\n",
-      "ProviderNumber,ZipCode -> HospitalName (0.04496411202487706)\n",
-      "ProviderNumber,ZipCode,HospitalName -> Address1 (0.034608651622256785)\n",
-      "ProviderNumber,ZipCode,HospitalName,Address1 -> City (0.04986984804044556)\n",
-      "ProviderNumber,ZipCode,HospitalName,Address1,City -> CountyName (0.05199581378819774)\n",
-      "ProviderNumber,ZipCode,HospitalName,Address1,City,CountyName -> PhoneNumber (0.03044218377800373)\n",
-      "ProviderNumber,HospitalName,Address1,City,CountyName,PhoneNumber -> HospitalOwner (0.11377982819937854)\n",
-      "MeasureCode -> MeasureName (0.029848491695482995)\n",
-      "MeasureCode,MeasureName -> Stateavg (0.019709270903811565)\n",
-      "MeasureCode,MeasureName,Stateavg -> Condition (0.20284724262794313)\n",
-      "HospitalName,CountyName -> EmergencyService (0.14662080536803757)\n"
+      "CountyName -> ProviderNumber (0.08011796750054749)\n",
+      "CountyName,ProviderNumber -> HospitalName (0.0372943706975499)\n",
+      "CountyName,ProviderNumber,HospitalName -> Address1 (0.0331320091538217)\n",
+      "CountyName,ProviderNumber,HospitalName,Address1 -> City (0.04177468918949489)\n",
+      "CountyName,ProviderNumber,HospitalName,Address1,City -> ZipCode (0.03039670309363575)\n",
+      "CountyName,ProviderNumber,HospitalName,Address1,City,ZipCode -> PhoneNumber (0.029378028437848522)\n",
+      "CountyName,ProviderNumber,HospitalName,Address1,City,ZipCode,PhoneNumber -> HospitalOwner (0.11312183851385418)\n",
+      "CountyName,HospitalName,ZipCode -> EmergencyService (0.1459585582287513)\n",
+      "MeasureCode -> MeasureName (0.029849657219868726)\n",
+      "MeasureCode,MeasureName -> Stateavg (0.01970973225687476)\n",
+      "MeasureCode,MeasureName,Stateavg -> Condition (0.2028469591368578)\n"
      ]
     }
    ],
    "source": [
     "parent_sets = pf.session.get_dependencies(score=\"fit_error\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, json\n",
+    "def read_fds(path='data/fds', f='TECHospital-hyfd'):\n",
+    "    all_fds = {}\n",
+    "    for line in open(os.path.join(path,f)):\n",
+    "        fd = json.loads(line)\n",
+    "        right = fd[u'dependant']['columnIdentifier']\n",
+    "        left = [l[u'columnIdentifier'] for l in fd[ u'determinant'][u'columnIdentifiers']]\n",
+    "        if right not in all_fds:\n",
+    "            all_fds[right] = set()\n",
+    "        all_fds[right].add(frozenset(left))\n",
+    "    return all_fds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt = read_fds()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['CountyName'] -> ProviderNumber is not valid\n",
+      "['CountyName' 'ProviderNumber'] -> HospitalName is not valid\n",
+      "['CountyName' 'ProviderNumber' 'HospitalName'] -> Address1 is not valid\n",
+      "['CountyName' 'ProviderNumber' 'HospitalName' 'Address1'] -> City is not valid\n",
+      "['CountyName' 'ProviderNumber' 'HospitalName' 'Address1' 'City'] -> ZipCode is not valid\n",
+      "['CountyName' 'ProviderNumber' 'HospitalName' 'Address1' 'City' 'ZipCode'] -> PhoneNumber is not valid\n",
+      "['CountyName' 'ProviderNumber' 'HospitalName' 'Address1' 'City' 'ZipCode'\n",
+      " 'PhoneNumber'] -> HospitalOwner is not valid\n",
+      "['CountyName' 'HospitalName' 'ZipCode'] -> EmergencyService is not valid\n",
+      "['MeasureCode'] -> MeasureName is not valid\n",
+      "['MeasureCode' 'MeasureName'] -> Stateavg is not valid\n",
+      "['MeasureCode' 'MeasureName' 'Stateavg'] -> Condition is not valid\n",
+      "Precision: 0.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "tp = 0\n",
+    "count = 0\n",
+    "for child in parent_sets:\n",
+    "    found = parent_sets[child]\n",
+    "    if len(found) == 0:\n",
+    "        continue\n",
+    "    count += 1\n",
+    "    match = False\n",
+    "    if child in gt:\n",
+    "        for parent in gt[child]:\n",
+    "            if set(parent).issubset(found):\n",
+    "                tp += 1\n",
+    "                match = True\n",
+    "                break\n",
+    "    if not match:\n",
+    "        print(\"{} -> {} is not valid\".format(found, child))\n",
+    "    \n",
+    "print(\"Precision: %.4f\"%(float(tp) / count))"
    ]
   },
   {
