--- a/tutorials/Tutorial2_TECHospital.ipynb
+++ b/tutorials/Tutorial2_TECHospital.ipynb
@@ -50,7 +50,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.006948947906494141] Load Data start\n",
+      "INFO:profiler.utility:[0.00742793083190918] Load Data start\n",
       "\n",
       "INFO:profiler.dataset:parameters used for data loading:\n",
       " {'na_values': 'not available', 'sep': ',', 'header': 'infer', 'dropcol': None, 'dropna': False, 'encoding': 'latin-1', 'normalize': True, 'min_categories_for_embedding': 10}\n",
@@ -75,7 +75,7 @@
       "INFO:profiler.dataset:(possible types: numeric, categorical, text, date)\n",
       "INFO:profiler.dataset:inferred operators of attributes: {'Provider ID': ['equal'], 'Hospital Name': ['equal'], 'Address': ['equal'], 'City': ['equal'], 'State': ['equal'], 'ZIP Code': ['equal'], 'County Name': ['equal'], 'Phone Number': ['equal'], 'Condition': ['equal'], 'Measure ID': ['equal'], 'Measure Name': ['equal'], 'Score': ['equal'], 'Sample': ['equal'], 'Footnote': ['equal'], 'Measure Start Date': ['equal'], 'Measure End Date': ['equal']}\n",
       "INFO:profiler.dataset:(possible operators: equal, notequal, greater_than, less_than)\n",
-      "INFO:profiler.utility:[1.052103042602539] Load Data execution time: 1.045154094696045\n",
+      "INFO:profiler.utility:[1.241791009902954] Load Data execution time: 1.234363079071045\n",
       "\n"
      ]
     }
@@ -152,16 +152,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[17.964517831802368] Create Training Data start\n",
+      "INFO:profiler.utility:[15.421365022659302] Create Training Data start\n",
       "\n",
       "INFO:profiler.transformer:needs multiplier = 2 to bound the error in inv cov estimation <= 0.05000000\n",
       "INFO:profiler.transformer:use multiplier = 2, and the bound is 0.00005616\n",
       "INFO:profiler.transformer:Draw Pairs\n",
-      "100%|██████████| 16/16 [00:02<00:00,  7.16it/s]\n",
+      "100%|██████████| 16/16 [00:02<00:00,  6.88it/s]\n",
       "INFO:profiler.transformer:Number of training samples: 1614816\n",
       "INFO:profiler.transformer:Computing Differences\n",
       "INFO:profiler.transformer:estimated missing data probability in training data is 0.0855\n",
-      "INFO:profiler.utility:[29.069162130355835] Create Training Data execution time: 11.104644298553467\n",
+      "INFO:profiler.utility:[26.31535792350769] Create Training Data execution time: 10.893992900848389\n",
       "\n"
      ]
     }
@@ -188,10 +188,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[29.07545304298401] Learn Structure start\n",
+      "INFO:profiler.utility:[26.32094383239746] Learn Structure start\n",
       "\n",
       "INFO:profiler.learner:use threshold 0.0392\n",
-      "INFO:profiler.utility:[29.538742065429688] Learn Structure execution time: 0.4632890224456787\n",
+      "INFO:profiler.utility:[26.803595781326294] Learn Structure execution time: 0.482651948928833\n",
       "\n"
      ]
     }
@@ -218,7 +218,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[29.54626703262329] Get Dependencies start\n",
+      "INFO:profiler.utility:[26.80964684486389] Get Dependencies start\n",
       "\n"
      ]
     },
@@ -230,17 +230,14 @@
       "Provider ID,Hospital Name -> Address (0.007858245187263354)\n",
       "Provider ID,Hospital Name,Address -> City (0.01860290496449381)\n",
       "Provider ID,Hospital Name,Address,City -> State (0.07425846555898286)\n",
-      "Provider ID,Hospital Name,Address,City,State -> ZIP Code (0.028439457864752386)\n",
-      "Provider ID,Hospital Name,Address,City,State,ZIP Code -> County Name (0.018090274389216256)\n",
-      "Provider ID,Hospital Name,Address,City,State,ZIP Code,County Name -> Phone Number (0.0029760214091091026)\n",
-      "Measure ID -> Measure Name (0.04483222410072152)\n"
+      "Provider ID,Hospital Name,Address,City,State -> ZIP Code (0.028439457864752386)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[30.134317874908447] Get Dependencies execution time: 0.5880508422851562\n",
+      "INFO:profiler.utility:[27.332321882247925] Get Dependencies execution time: 0.5226750373840332\n",
       "\n"
      ]
     },
@@ -248,6 +245,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Provider ID,Hospital Name,Address,City,State,ZIP Code -> County Name (0.018090274389216256)\n",
+      "Provider ID,Hospital Name,Address,City,State,ZIP Code,County Name -> Phone Number (0.0029760214091091026)\n",
+      "Measure ID -> Measure Name (0.04483222410072152)\n",
       "Measure ID,Measure Name -> Condition (0.23229817014052462)\n",
       "Measure Start Date -> Measure End Date (0.07768434250278881)\n"
      ]
@@ -256,6 +256,95 @@
    "source": [
     "parent_sets = pf.session.get_dependencies(score=\"fit_error\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate FDs -- Precision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, json\n",
+    "def read_fds(path='data/fds', f='TECHospital-hyfd'):\n",
+    "    all_fds = {}\n",
+    "    for line in open(os.path.join(path,f)):\n",
+    "        fd = json.loads(line)\n",
+    "        right = fd[u'dependant']['columnIdentifier']\n",
+    "        left = [l[u'columnIdentifier'] for l in fd[ u'determinant'][u'columnIdentifiers']]\n",
+    "        if right not in all_fds:\n",
+    "            all_fds[right] = set()\n",
+    "        all_fds[right].add(frozenset(left))\n",
+    "    return all_fds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt = read_fds()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision: 1.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "tp = 0\n",
+    "count = 0\n",
+    "for child in parent_sets:\n",
+    "    found = parent_sets[child]\n",
+    "    if len(found) == 0:\n",
+    "        continue\n",
+    "    count += 1\n",
+    "    match = False\n",
+    "    for parent in gt[child]:\n",
+    "        if set(parent).issubset(found):\n",
+    "            tp += 1\n",
+    "            match = True\n",
+    "            break\n",
+    "    if not match:\n",
+    "        print(\"{} -> {} is not valid\".format(found, child))\n",
+    "    \n",
+    "print(\"Precision: %.4f\"%(float(tp) / count))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate FDs -- Recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
