--- a/tutorials/Tutorial2_TECHospital.ipynb
+++ b/tutorials/Tutorial2_TECHospital.ipynb
@@ -22,11 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pf = Profiler(workers=2, tol=0.01, eps=0.05, embedtxt=False)"
+    "pf = Profiler(workers=2, tol=0, eps=0.05, embedtxt=False)"
    ]
   },
   {
@@ -43,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.00742793083190918] Load Data start\n",
+      "INFO:profiler.utility:[0.008813142776489258] Load Data start\n",
       "\n",
       "INFO:profiler.dataset:parameters used for data loading:\n",
       " {'na_values': 'not available', 'sep': ',', 'header': 'infer', 'dropcol': None, 'dropna': False, 'encoding': 'latin-1', 'normalize': True, 'min_categories_for_embedding': 10}\n",
@@ -75,7 +75,7 @@
       "INFO:profiler.dataset:(possible types: numeric, categorical, text, date)\n",
       "INFO:profiler.dataset:inferred operators of attributes: {'Provider ID': ['equal'], 'Hospital Name': ['equal'], 'Address': ['equal'], 'City': ['equal'], 'State': ['equal'], 'ZIP Code': ['equal'], 'County Name': ['equal'], 'Phone Number': ['equal'], 'Condition': ['equal'], 'Measure ID': ['equal'], 'Measure Name': ['equal'], 'Score': ['equal'], 'Sample': ['equal'], 'Footnote': ['equal'], 'Measure Start Date': ['equal'], 'Measure End Date': ['equal']}\n",
       "INFO:profiler.dataset:(possible operators: equal, notequal, greater_than, less_than)\n",
-      "INFO:profiler.utility:[1.241791009902954] Load Data execution time: 1.234363079071045\n",
+      "INFO:profiler.utility:[1.073686122894287] Load Data execution time: 1.0648729801177979\n",
       "\n"
      ]
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -145,23 +145,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[15.421365022659302] Create Training Data start\n",
+      "INFO:profiler.utility:[14.765315055847168] Create Training Data start\n",
       "\n",
       "INFO:profiler.transformer:needs multiplier = 2 to bound the error in inv cov estimation <= 0.05000000\n",
       "INFO:profiler.transformer:use multiplier = 2, and the bound is 0.00005616\n",
       "INFO:profiler.transformer:Draw Pairs\n",
-      "100%|██████████| 16/16 [00:02<00:00,  6.88it/s]\n",
+      "100%|██████████| 16/16 [00:02<00:00,  7.30it/s]\n",
       "INFO:profiler.transformer:Number of training samples: 1614816\n",
       "INFO:profiler.transformer:Computing Differences\n",
       "INFO:profiler.transformer:estimated missing data probability in training data is 0.0855\n",
-      "INFO:profiler.utility:[26.31535792350769] Create Training Data execution time: 10.893992900848389\n",
+      "INFO:profiler.utility:[25.311820030212402] Create Training Data execution time: 10.546504974365234\n",
       "\n"
      ]
     }
@@ -181,17 +181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[26.32094383239746] Learn Structure start\n",
+      "INFO:profiler.utility:[25.317392110824585] Learn Structure start\n",
       "\n",
       "INFO:profiler.learner:use threshold 0.0392\n",
-      "INFO:profiler.utility:[26.803595781326294] Learn Structure execution time: 0.482651948928833\n",
+      "INFO:profiler.utility:[25.747045278549194] Learn Structure execution time: 0.4296531677246094\n",
       "\n"
      ]
     }
@@ -211,14 +211,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[26.80964684486389] Get Dependencies start\n",
+      "INFO:profiler.utility:[25.752657175064087] Get Dependencies start\n",
       "\n"
      ]
     },
@@ -226,18 +226,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Provider ID -> Hospital Name (0.022575206575587467)\n",
-      "Provider ID,Hospital Name -> Address (0.007858245187263354)\n",
-      "Provider ID,Hospital Name,Address -> City (0.01860290496449381)\n",
-      "Provider ID,Hospital Name,Address,City -> State (0.07425846555898286)\n",
-      "Provider ID,Hospital Name,Address,City,State -> ZIP Code (0.028439457864752386)\n"
+      "Provider ID -> Hospital Name (0.022578204535723814)\n",
+      "Provider ID,Hospital Name -> Address (0.007860117766070998)\n",
+      "Provider ID,Hospital Name,Address -> City (0.018604059923026543)\n",
+      "Provider ID,Hospital Name,Address,City -> State (0.07426017148598284)\n",
+      "Provider ID,Hospital Name,Address,City,State -> ZIP Code (0.004503632700269765)\n",
+      "Provider ID,Hospital Name,Address,City,State,ZIP Code -> County Name (0.01836326247652238)\n",
+      "Provider ID,Hospital Name,Address,City,State,ZIP Code,County Name -> Phone Number (0.0023216072461673624)\n",
+      "Measure ID -> Measure Name (0.044749526368382885)\n",
+      "Measure ID,Measure Name -> Condition (0.23229817418540977)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[27.332321882247925] Get Dependencies execution time: 0.5226750373840332\n",
+      "INFO:profiler.utility:[26.277003049850464] Get Dependencies execution time: 0.524345874786377\n",
       "\n"
      ]
     },
@@ -245,10 +249,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Provider ID,Hospital Name,Address,City,State,ZIP Code -> County Name (0.018090274389216256)\n",
-      "Provider ID,Hospital Name,Address,City,State,ZIP Code,County Name -> Phone Number (0.0029760214091091026)\n",
-      "Measure ID -> Measure Name (0.04483222410072152)\n",
-      "Measure ID,Measure Name -> Condition (0.23229817014052462)\n",
       "Measure Start Date -> Measure End Date (0.07768434250278881)\n"
      ]
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -334,17 +334,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def find_ancesters(node, dic):\n",
+    "    a = []\n",
+    "    if node not in dic:\n",
+    "        return a\n",
+    "    for p in dic[node]:\n",
+    "        a.append(p)\n",
+    "        a.extend(find_ancesters(p, dic))\n",
+    "    return a\n",
+    "def ancester_sets(dic):\n",
+    "    ancesters = {}\n",
+    "    for child in dic:\n",
+    "        ancesters[child] = find_ancesters(child, dic)\n",
+    "    return ancesters"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Provider ID']"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ancesters['Hospital Name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frozenset({'Footnote', 'Phone Number', 'Address'}) -> Hospital Name is not found\n",
+      "frozenset({'Footnote', 'ZIP Code', 'Address'}) -> Hospital Name is not found\n",
+      "frozenset({'Footnote', 'Phone Number', 'ZIP Code'}) -> Hospital Name is not found\n",
+      "frozenset({'County Name', 'Footnote', 'Address'}) -> Hospital Name is not found\n",
+      "frozenset({'Footnote', 'City', 'Address'}) -> Hospital Name is not found\n",
+      "frozenset({'Footnote', 'Phone Number', 'ZIP Code'}) -> Address is not found\n",
+      "frozenset({'Phone Number', 'Hospital Name'}) -> Address is not found\n",
+      "frozenset({'ZIP Code', 'Hospital Name'}) -> Address is not found\n",
+      "frozenset({'Hospital Name', 'State', 'City'}) -> Address is not found\n",
+      "frozenset({'ZIP Code', 'Address'}) -> City is not found\n",
+      "frozenset({'Phone Number', 'Hospital Name'}) -> City is not found\n",
+      "frozenset({'Phone Number', 'ZIP Code'}) -> City is not found\n",
+      "frozenset({'ZIP Code', 'Hospital Name'}) -> City is not found\n",
+      "frozenset({'County Name', 'Address'}) -> City is not found\n",
+      "frozenset({'Phone Number', 'Address'}) -> City is not found\n",
+      "frozenset({'Phone Number'}) -> State is not found\n",
+      "frozenset({'ZIP Code'}) -> State is not found\n",
+      "frozenset({'County Name', 'Address'}) -> State is not found\n",
+      "frozenset({'Phone Number', 'Hospital Name'}) -> ZIP Code is not found\n",
+      "frozenset({'County Name', 'Address'}) -> ZIP Code is not found\n",
+      "frozenset({'Phone Number', 'Address'}) -> ZIP Code is not found\n",
+      "frozenset({'Phone Number', 'City'}) -> County Name is not found\n",
+      "frozenset({'Phone Number', 'Hospital Name'}) -> County Name is not found\n",
+      "frozenset({'Phone Number', 'ZIP Code'}) -> County Name is not found\n",
+      "frozenset({'Phone Number', 'Address'}) -> County Name is not found\n",
+      "frozenset({'Measure Name'}) -> Measure End Date is not found\n",
+      "frozenset({'Measure ID'}) -> Measure End Date is not found\n",
+      "Recall: 0.5091\n"
+     ]
+    }
+   ],
+   "source": [
+    "ancesters = ancester_sets(parent_sets)\n",
+    "count = 0\n",
+    "miss = 0\n",
+    "for child in ancesters:\n",
+    "    found = parent_sets[child]\n",
+    "    if len(found) == 0:\n",
+    "        continue\n",
+    "    for parent in gt[child]:\n",
+    "        count += 1\n",
+    "        if not set(parent).issubset(found):\n",
+    "            miss += 1\n",
+    "            print(\"{} -> {} is not found\".format(parent, child))\n",
+    "print(\"Recall: %.4f\"%(1 - float(miss) / count))"
+   ]
   },
   {
    "cell_type": "markdown",
