--- a/tutorials/Tutorial1_Hospital.ipynb
+++ b/tutorials/Tutorial1_Hospital.ipynb
@@ -1519,7 +1519,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fd3",
+   "display_name": "Python (fd3)",
    "language": "python",
    "name": "fd3"
   },
@@ -1533,7 +1533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
